deploy/k8s/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lip-registry-api
  namespace: lip-registry
  labels:
    app: lip-registry
    app.kubernetes.io/name: lip-registry-api
    app.kubernetes.io/part-of: lip-platform
spec:
  type: ClusterIP
  selector:
    app: lip-registry
  ports:
    - name: http
      port: 54321
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: lip-registry-nodeport
  namespace: lip-registry
  labels:
    app: lip-registry
    app.kubernetes.io/name: lip-registry-nodeport
    app.kubernetes.io/part-of: lip-platform
spec:
  type: NodePort
  selector:
    app: lip-registry
  ports:
    - name: http
      port: 54321
      targetPort: http
      nodePort: 30422
      protocol: TCP
